--- a/src/App.css
+++ b/src/App.css
@@ -11,18 +11,8 @@ header img {
     max-width: 200px;
 }
 
-header h1 {
-    font-weight: bold;
-}
-
-header p {
-    font-size: 1.2rem;
-    color: #6c757d;
-}
-
 /* Estilo dos cards */
 .card {
-    border: none;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -32,9 +22,8 @@ header p {
     object-fit: cover;
 }
 
-/* Ajustando o botão */
-.btn-primary {
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
+.table td,
+.table th {
+    white-space: nowrap;
+    /* Impede a quebra de linha */
 }
